--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,9 @@
+aiohttp==3.8.1
+aiosignal==1.2.0
 asgiref==3.5.1
+async-timeout==4.0.2
+attrs==21.4.0
+backports.zoneinfo==0.2.1
 certifi==2021.10.8
 cffi==1.15.0
 charset-normalizer==2.0.12
@@ -6,12 +11,16 @@ cryptography==37.0.1
 Deprecated==1.2.13
 Django==4.0.4
 djangorestframework==3.13.1
+frozenlist==1.3.0
 gcloud==0.18.3
-googleapis-common-protos==1.56.0 
+googleapis-common-protos==1.56.0
 gunicorn==20.1.0
 httplib2==0.20.4
 idna==3.3
+joblib==1.1.0
 jwcrypto==1.2
+multidict==6.0.2
+numpy==1.22.3
 oauth2client==4.1.3
 protobuf==3.20.1
 pyasn1==0.4.8
@@ -26,8 +35,13 @@ pytz==2022.1
 requests==2.27.1
 requests-toolbelt==0.9.1
 rsa==4.8
+scikit-learn==1.0.2
+scipy==1.8.0
 six==1.16.0
+sklearn==0.0
 sqlparse==0.4.2
+threadpoolctl==3.1.0
 tzdata==2022.1
 urllib3==1.26.9
 wrapt==1.14.0
+yarl==1.7.2
